--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "Nambi-venv\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\JDGX\\AppData\\Local\\Programs\\Python\\Python37\\python.exe",
+    "editor.fontFamily": "Consolas, 'Courier New', D2Coding ligature"
 }
